--- a/ShelterMap/app/src/main/AndroidManifest.xml
+++ b/ShelterMap/app/src/main/AndroidManifest.xml
@@ -9,14 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeScreen"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".AccountActivity" />
+        <activity android:name=".RegisterActivity"></activity>
     </application>
 
 </manifest>
