--- a/ShelterMap/app/src/main/AndroidManifest.xml
+++ b/ShelterMap/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".AccountActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".MapsActivity"></activity>
+        <activity android:name=".ShelterActivity"></activity>
     </application>
 
 </manifest>
