--- a/ShelterMap/app/src/main/AndroidManifest.xml
+++ b/ShelterMap/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".AccountActivity" />
         <activity android:name=".RegisterActivity" />
+        <activity android:name=".ShelterListActivity" />
         <activity android:name=".ShelterActivity"></activity>
     </application>
 
