--- a/ShelterMap/app/src/main/AndroidManifest.xml
+++ b/ShelterMap/app/src/main/AndroidManifest.xml
@@ -15,16 +15,19 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDXukcwOESogZwW8YL7gpbBHiTlnJGbhrs" />
 
-        <activity android:name=".WelcomeActivity">
+        <activity android:name=".WelcomeActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".AccountActivity" />
-        <activity android:name=".RegisterActivity" />
+        <activity android:name=".RegisterActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".DetailedViewActivity" />
         <activity
             android:name=".SearchActivity"
