--- a/ShelterMap/app/build.gradle
+++ b/ShelterMap/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation files('libs/activation.jar')
     implementation files('libs/additionnal.jar')
+    implementation 'com.github.varunest:sparkbutton:1.0.5'
 }
